test1/force-app/main/default/objects/Merchandise_Arch__c/Merchandise_Arch__c.object-meta.xml
<CustomObject>
    <label>Merchandise Arch</label>
    <nameField>
        <label>Merchandise Arch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise Archs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>