test1/force-app/main/default/objects/Merchandise_Arch__c/fields/Merchandise_Arch_Desc__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Arch_Desc__c</fullName>
    <label>Merchandise Arch Desc</label>
    <type>TextArea</type>
</CustomField>