test1/force-app/main/default/objects/Merchandise_Arch__c/fields/Merchandise_Arch_Price__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Arch_Price__c</fullName>
    <label>Merchandise Arch Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>